// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > postModel > 200 > ok 1`] = `
{
  "card": {
    "_id": "test",
  },
}
`;

exports[`routes > model > postModel > 400 > no description 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "Must specify schema id within the body",
          "path": [
            "body",
            "schemaId",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Path: body.schemaId - Message: Must specify schema id within the body",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > model > postModel > audit > expected call 1`] = `"example"`;

exports[`routes > model > postModel > audit > expected call 2`] = `
{
  "_id": "test",
}
`;
